fixed hiding menu on iphone

--- a/styles/components/navigation.css
+++ b/styles/components/navigation.css
@@ -11,7 +11,7 @@
     justify-content: space-between;
     align-items: center;
     font-size: 1.2rem;
-    z-index: 5;
+    z-index: 99;
     transition: 0.5s;
 }
 
